--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<ul>
 								<li><a href="index.html">Inicio</a></li>
 
-								<li><a href="blo.html">Guerra Comercial</a></li>
+								<li><a href="blog.html">Guerra Comercial</a></li>
 								<li><a href="single.html">Proteccionismo</a></li>
 								<li><a href="about.html">Economia Global</a></li>
 							</ul>
